<resources>
    <string name="release_base_url" translatable="false">https://www.wanandroid.com/</string>
    <string name="debug_base_url" translatable="false">http://mobile.bwstudent.com/</string>


    <string name="titlebar_search_hint">搜索</string>
    <string name="language">zh_CN</string>


    <string name="share_qq">QQ</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_wechat">微信</string>
    <string name="share_moment">朋友圈</string>
    <string name="share_weibo">微博</string>
    <string name="share_link">复制链接</string>
    <string name="share_save_img">保存图片</string>
    <string name="link_is_copy">链接已复制到粘贴板中</string>
    <string name="img_is_save">图片已保存到相册</string>

    <string name="share_cancel">分享取消</string>
    <string name="share_denied">分享拒绝</string>

    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="loading_end">我是有底线的</string>
    <string name="generate_code_hint">请输入要生成的内容</string>
    <string name="generate_code_text">生成二维码</string>
    <string name="save_success">保存成功</string>
    <string name="generate_qr_code">生成二维码</string>
    <string name="decode_qr_code_fail">解析二维码失败</string>
    <string name="debug_environment">测试环境</string>
    <string name="release_environment">生产环境</string>
    <string name="text_ping_test">PING TEST</string>
    <string name="text_schema">SCHEMA</string>
    <string name="input_content">请输入内容</string>
    <string name="debug_page_title">调试页面</string>

    <string name="short_cut_scan">扫一扫</string>
    <string name="short_cut_generate">生成二维码</string>
    <string name="short_cut_tip">当前功能咱不可用</string>

    <string name="home_title_text">首页</string>
    <string name="demo_title_text">功能演示</string>
    <string name="app_content">玩Android是一个每日推荐20~30篇Android优质文章的站点,提供Android常用工具和常用网站,并以知识体系的形式展现所有的文章分类。</string>
    <string name="app_website">https://wanandroid.com/</string>
    <string name="choose_logo">选择图片</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="cache_text">当前缓存%s 清除缓存</string>
    <string name="text_image_select">图片选择</string>
    <string name="text_video_select">视频选择</string>
    <string name="text_media_select">选择媒体</string>
    <string name="text_all_image">所有图片</string>
    <string name="text_all_video">所有视频</string>
    <string name="text_all_media">全部</string>
    <string name="image_select_total">共 %d 张</string>
    <string name="text_max_select">最多选择 %d 张</string>
    <string name="text_video_loading">加载中&#8230;</string>
    <string name="string_last_loading_tip">数据处理中&#8230;</string>
    <string name="load_failed">加载失败，点击重试</string>
    <string name="load_failed_no_network">网络异常，请重试</string>
    <string name="load_failed_no_network1">网络断线，</string>
    <string name="load_failed_no_network2">点击屏幕刷新~</string>
    <string name="empty">暂无数据</string>
    <string name="complete_all">您已完成全部数据</string>
    <string name="str_none" translatable="false" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="expand">expand</string>
    <string name="shrink">shrink</string>

</resources>