<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent" />

    <RelativeLayout
        android:layout_width="305dp"
        android:layout_height="180dp"
        android:background="@drawable/bg_debug_dialog">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_color"
            android:textSize="16dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_debug_input"
            android:hint="@string/input_content"
            android:paddingVertical="7dp"
            android:paddingStart="15dp"
            android:singleLine="true"
            android:textSize="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_above="@+id/ll_bottom"
            android:background="@color/color_line" />

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/dp15"
                android:paddingVertical="8dp"
                android:text="@string/cancel"
                android:textColor="@color/colorRed" />

            <View
                android:layout_width="2px"
                android:layout_height="match_parent"
                android:background="@color/color_line" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/dp15"
                android:paddingVertical="8dp"
                android:text="@string/confirm"
                android:textColor="@color/text_blue_color" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@android:color/transparent" />
</LinearLayout>