<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_default"
        android:orientation="vertical"
        tools:context="com.android.project.ui.activity.DebugActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_release"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/bg_common"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="5dp"
                    app:cardPreventCornerOverlap="false">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iv_release_check"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:src="@mipmap/icon_selected" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_release_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="15dp"
                            android:layout_toEndOf="@+id/iv_release_check"
                            android:gravity="center"
                            android:text="@string/release_environment"
                            android:textColor="@color/text_color"
                            android:textSize="14dp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_release_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_release_title"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="15dp"
                            android:layout_toEndOf="@+id/iv_release_check"
                            android:gravity="center"
                            android:text="@string/release_base_url"
                            android:textColor="@color/text_light_color"
                            android:textSize="12dp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_debug"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    app:cardBackgroundColor="@color/bg_common"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="5dp"
                    app:cardPreventCornerOverlap="false">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iv_debug_check"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:src="@mipmap/icon_unselected" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_debug_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="15dp"
                            android:layout_toEndOf="@+id/iv_debug_check"
                            android:text="@string/debug_environment"
                            android:textColor="@color/text_color"
                            android:textSize="14dp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_debug_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_debug_title"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="15dp"
                            android:layout_toEndOf="@+id/iv_debug_check"
                            android:text="@string/debug_base_url"
                            android:textColor="@color/text_light_color"
                            android:textSize="12dp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_schema"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:background="@drawable/bg_btn_generate"
                    android:text="@string/text_schema"
                    android:textColor="@color/colorWhite" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_network_test"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:background="@drawable/bg_btn_generate"
                    android:text="@string/text_ping_test"
                    android:textColor="@color/colorWhite" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_network_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="5dp"
                    android:paddingHorizontal="5dp"
                    android:textColor="@color/text_sub_color"
                    android:textSize="@dimen/dp12" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</layout>